# Brick-Haystack-harmonization

./: Brick.ttl  LICENSE  Makefile  README.md  brick_report.txt  pyproject.toml  unified_taxonomy.yaml
.github/workflows/: builds.yml
brick-haystack-harmonization/: check_brick.py
brick_haystack_harmonization/: bh_to_shapes.py  bh_to_xeto.py  brick_to_haystack.py  check_brick.py  common.py  main.py  ph2ttl2.py  ph_to_ttl.py  visualize_taxonomy.py  xeto2shacl2.py  xeto_to_shacl.py
brick_haystack_harmonization/data/: bh-mapping.pkl  bh.ttl  bhbase.ttl  brick-haystack.csv  haystack.ttl  resolved-all.json  resolved-bh.json
brick_haystack_harmonization/data/bmotif/: templates.yml
brick_haystack_harmonization/data/haystack-models/: LTE_Mapping.json  LTE_Mapping.ttl  xavier.json
brick_haystack_harmonization/data/xetolib/: bh.xeto  lib.xeto
data/: bh.ttl  brick-haystack.csv  resolved-all.json  resolved-bh.json
data/bmotif/: templates.yml
data/converted-models/: g36-vav-a2.json  g36-vav-a2.ttl
data/haystack-models/: alpha.json  alpha.ttl  charlie.json  charlie.ttl  minimum.json  minimum.ttl
data/xetolib/: bh.xeto  lib.xeto
demo/: 1_load_libraries.py  223p-brick-haystack.json  223p-brick-haystack.ttl  223p-brick-model.ttl  2_generate_sheet_model.py  3_generate_model_from_spreadsheet.py  4_generate_haystack_model.sh  5_generate_brick_223p.sh  buildingmotif.libraries.yml  from-spreadsheet-haystack.json  from-spreadsheet-haystack.ttl  from-spreadsheet.ttl  ingress.py  vav_reheat.xlsx
demo/demolib/: 223p_templates.yml
haxall/: start.sh
haystack-ontology/: defs.json  generate.py  haystack.ttl
tools/: bh-to-shapes.py  bh-to-xeto.py  check_brick.py  common.py  visualize_taxonomy.py  xeto-to-shacl.py
xeto/doc/: doc.css  index.html
xeto/doc/data/: DataContext.html  DataDict.html  DataEnv.html  DataLib.html  DataLogRec.html  DataSlots.html  DataSpec.html  DataType.html  index.html
xeto/doc/lib-axon/: admin.html  disableOverridableChecks.html  err.html  errTrace.html  expr.html  foldOn.html  func.html  func~abs.html  func~add.html  func~addAll.html  func~addCol.html  func~addColMeta.html  func~addCols.html  func~addMeta.html  func~addRow.html  func~addRows.html  func~all.html  func~any.html  func~as.html  func~avg.html  func~call.html  func~capitalize.html  func~clamp.html  func~col.html  func~colNames.html  func~colToList.html  func~collect.html  func~cols.html  func~colsToLocale.html  func~compDef.html  func~concat.html  func~conjuncts.html  func~contains.html  func~coord.html  func~coordDist.html  func~coordLat.html  func~coordLng.html  func~count.html  func~curFunc.html  func~date.html  (+225 more)
xeto/doc/lib-data/: func~fits.html  func~fitsExplain.html  func~fitsMatchAll.html  func~instantiate.html  func~is.html  func~query.html  func~queryAll.html  func~queryNamed.html  func~spec.html  func~specAst.html  func~specAstOwn.html  func~specBase.html  func~specFits.html  func~specFitsExplain.html  func~specIs.html  func~specMetaOwn.html  func~specName.html  func~specParent.html  func~specQName.html  func~specSlots.html  func~specSlotsOwn.html  func~specType.html  func~typeof.html  func~types.html  index.html
xeto/doc/lib-hx/: created.html  disKey.html  disMacro.html  disabled.html  filetype~excel.html  (+52 more)
(+52 files in other folders)
